--- a/bot.yml
+++ b/bot.yml
@@ -1,7 +1,7 @@
-name: Beepboop Starterbot
-description: A simple Python bot sample for Beep Boop
-avatar: resources/avatar.png
-background: resources/background.png
+name: Staples Bot
+description: A simple Python bot to interact with employees.
+avatar: resources/avatar.jpg
+background: resources/background.jpg
 config:
   - name: LOG_LEVEL
     friendly_name: Severity level to show for logging.
@@ -13,4 +13,4 @@ config:
     type: secret
     default: not secret though
 screenshots:
-  - screenshot: resources/screenshot1.png
+  - screenshot: resources/screenshot1.jpg
